--- a/src/index.html
+++ b/src/index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <div class="container">
+      <form class="form">
+        <input
+          type="text"
+          placeholder="Search images..."
+          name="request"
+          required
+        />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+        <button type="submit">Search</button>
+      </form>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
