--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
 
         <button type="submit">Search</button>
       </form>
+      <div class="js-image-container"></div>
     </div>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
