--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
       <button type="submit">Search</button>
     </form>
-    <div class="loader is-hidden"></div>
+    <div class="loader"></div>
     <ul class="gallery"></ul>
     <script type="module" src="./main.js"></script>
   </body>
